# Shapez

./: README.md
Special_shapedFactory/: Belt.cpp  Belt.h  CMakeLists.txt  Cutter.cpp  Cutter.h  Help.cpp  Help.h  MapWidget.cpp  MapWidget.h  Miner.cpp  Miner.h  OverlayWindow.cpp  OverlayWindow.h  Shop.cpp  Shop.h  Spade.cpp  Spade.h  Trash.cpp  Trash.h  deliverycentre.cpp  deliverycentre.h  endscreen.cpp  endscreen.h  factory.cpp  factory.h  factory.ui  gamescreen.cpp  gamescreen.h  main.cpp  mainwindow.h  ore.cpp  ore.h  res.qrc  startscreen.cpp  startscreen.h
